jekyll folders, new images

--- a/cloth/assets/css/cloth.css
+++ b/cloth/assets/css/cloth.css
@@ -11,7 +11,7 @@ p {
 	z-index:-2;
 	width: 100%;
 	height: 31px;
-	background-color: #FF7F43;
+	background-color: #fe6612;
 }
 
 .hearts_bg {
@@ -26,7 +26,7 @@ p {
 
 #header {
 	height: 31px;
-	background-color: #FF6613;
+	background-color: #f28243;
 	color: #FFFFFF;
 	position: relative;
 }
@@ -45,10 +45,10 @@ p {
 .toolbar {
 	position: absolute;
 	right: 0px;
-	background-color: #823939;
+	background-color: #330d0c;
 	border-left: 5px solid white;
 	border-right: 5px solid white;
-	width: 308px;
+	width: 315px;
 }
 
 .toolbar > div, .toolbar > a {
@@ -83,11 +83,18 @@ p {
 #language {
 	color: #FFFFFF;
 	font-size: 11px;
-	padding: 7px 0 0 10px;
 }
 #language a {
+	display: block;
+	float: left;
+	padding: 6px 5px 8px 5px;
+	height: 17px;
 	color: #FFFFFF;
 	text-transform: uppercase;
+}
+#language a:hover {
+	background-color: #90696a;
+	text-decoration: none;
 }
 
 #navbar {
@@ -119,7 +126,7 @@ p {
 }
 
 .photos {
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 .photos img {
