--- a/cloth/assets/css/cloth.css
+++ b/cloth/assets/css/cloth.css
@@ -8,15 +8,17 @@ p {
 
 #header_bg {
 	position: absolute;
+	top:0;
+	left:0;
 	z-index:-2;
 	width: 100%;
 	height: 31px;
-	background-color: #fe6612;
+	background-color: #FB4F11;
 }
 
 .hearts_bg {
 	position: absolute;
-	background-image: url('../img/bg.png');
+	background-image: url('../img/bg3.png');
 	background-repeat: repeat;
 	z-index: -1;
 	right: 0px;
@@ -26,7 +28,7 @@ p {
 
 #header {
 	height: 31px;
-	background-color: #f28243;
+	background-color: #EC6D34;
 	color: #FFFFFF;
 	position: relative;
 }
@@ -49,6 +51,17 @@ p {
 	border-left: 5px solid white;
 	border-right: 5px solid white;
 	width: 315px;
+}
+@media (max-width: 630px) {
+  .logotype {
+	display:none;
+  }
+  #header {
+	border-right: 5px solid white;
+  }
+  .toolbar {
+	left:0px;
+  }
 }
 
 .toolbar > div, .toolbar > a {
@@ -110,6 +123,11 @@ p {
 	margin-top: 90px;
 	text-transform: uppercase;
 }
+@media (max-width: 767px) {
+  #nav {
+    margin-top:0px;;
+  }
+}
 
 #nav a {
 	color: #000000;
@@ -117,12 +135,12 @@ p {
 	text-decoration:none;
 }
 #nav a:hover {
-	color: #FF7D4B;
+	color: #FB4F11;
 }
 
 #content {
-	background-color: #FDF6EC;
-	border-top: 2px solid #FF7D4B;
+	background-color: #FCE5BF;
+	border-top: 2px solid #FB4F11;
 }
 
 .photos {
@@ -139,7 +157,7 @@ p {
 
 #footer {
 	background-color: #FDEACC;
-	border-top: 2px solid #FF7D4B;
+	border-top: 2px solid #FB4F11;
 	text-align: center;
 	font-size: 12px;
 	padding: 10px;
@@ -154,5 +172,5 @@ p {
 }
 #footer2 {
 	height: 31px;
-	background: url('../img/bg.png');
+	background: url('../img/bg3.png');
 }
