--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="favicon.ico">
 	<title>
-		{{ page.title}} - Cloth - Community League of the Heights
+		Cloth - Community League of the Heights
 	</title>
 	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 	<link href="css/bootstrap.css" rel="stylesheet" media="screen">
@@ -93,7 +93,7 @@
 		<div class="row" id="content">
 			<div class="span3 columnleft">
 				<div>
-					{{ page.content }}
+					{{ content }}
 				</div>
 			</div>
 			
