adjusted paths to assets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
 		Cloth - Community League of the Heights
 	</title>
 	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-	<link href="css/bootstrap.css" rel="stylesheet" media="screen">
-	<!--<link href="css/bootstrap-responsive.css" rel="stylesheet">-->
-	<link href="css/cloth.css" rel="stylesheet">
+	<link href="assets/css/bootstrap.css" rel="stylesheet" media="screen">
+	<!--<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">-->
+	<link href="assets/css/cloth.css" rel="stylesheet">
 	<script type="text/javascript">
 		/*
 		var _gaq = _gaq || [];
@@ -31,7 +31,7 @@
 	<div class="container">
 		<div class="row">
 			<div id="header" class="span12">
-				<div class="logotype"><img src="img/logotype.png" alt="Community League Of The Heights"></div>
+				<div class="logotype"><img src="assets/img/logotype.png" alt="Community League Of The Heights"></div>
 				<div class="toolbar">
 					<a id="donate" title="Donate"></a>
 					<a id="youtube" title="Youtube"></a>
@@ -47,7 +47,7 @@
 		<div class="row" id="navbar">
 			<div class="span3">
 				<a href="logo" id="logo">
-					<img src="img/cloth_logo.png" alt="CLOTH">
+					<img src="assets/img/cloth_logo.png" alt="CLOTH">
 				</a>
 			</div>
 			<div class="span9">
@@ -100,10 +100,10 @@
 			
 			<div class="span9 photos">
 				<div class="slideshow">
-					<img src="photos/building.jpg" alt=""/>
-					<img src="photos/grads.jpg" alt=""/>
-					<img src="photos/kids.jpg" alt=""/>
-					<img src="photos/pantry.jpg" alt=""/>
+					<img src="assets/photos/building.jpg" alt=""/>
+					<img src="assets/photos/grads.jpg" alt=""/>
+					<img src="assets/photos/kids.jpg" alt=""/>
+					<img src="assets/photos/pantry.jpg" alt=""/>
 				</div>
 			</div>
 			
@@ -122,8 +122,8 @@
 	<div class="row" id="footer2">
 	</div>
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.cycle.all.latest.js"></script>
-	<script src="js/cloth.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/jquery.cycle.all.latest.js"></script>
+	<script src="assets/js/cloth.js"></script>
   </body>
 </html>
