--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,13 +2,13 @@
 layout: main
 ---
 
-<div class="span3 columnleft">
+<div class="span2 left">
 	<div>
 		<h1>{{ page.title }}</h1>
 		{{ page.aside | textilize }}
 	</div>
 </div>
 
-<div class="span9 photos">
+<div class="span5 photos">
 	{{ content }}
 </div>
