--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,18 +2,16 @@
 layout: main
 ---
 
-<div class="span3 columnleft">
-	<h1>{{ page.title }}</h1>
-	{% if page.aside %}
-		{{ page.aside | textilize }}
-	{% endif %}
-	{% if page.aside_image %}
-		<img src="{{ page.aside_image }}" alt="">
-	{% endif %}
+<div class="span2 left{% if page.aside_image %} bottomimage" style="background-image: url('{{ page.aside_image }}'){% endif %}">
+	<div>
+		<h1>{{ page.title }}</h1>
+		{% if page.aside %}
+			{{ page.aside | textilize }}
+		{% endif %}
+	</div>
 </div>
-<div class="span9">
-	{% if page.top_image %}
-		<img src="{{ page.top_image }}" alt="">
-	{% endif %}
-	{{ content }}
+<div class="span5 right{% if page.top_image %} topimage" style="background-image: url('{{ page.top_image }}'){% endif %}">
+	<div>
+		{{ content }}
+	</div>
 </div>
