--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -2,39 +2,39 @@
 layout: main
 ---
 
-<div class="span3 columnleft">
-	<h1>Services</h1>
-	<ul>
-		<li>
-			<a href="/services/after_school.html">After School Program</a>
-		</li>
-		<li>
-			<a href="/services/broadway_united_businesses.html">Broadway United Businesses</a>
-		</li>
-		<li>
-			<a href="/services/chah.html">C.H.A.H. - Community Health Academy of the Heights</a>
-		</li>
-		<li>
-			<a href="/services/food_pantry.html">Food Pantry</a>
-		</li>
-		<li>
-			<a href="/services/freshmen_leadership.html">Freshmen Leadership Initiative Program</a>
-		</li>
-		<li>
-			<a href="/services/housing_development.html">Housing Development</a>
-		</li>
-		<li>
-			<a href="/services/technology_center.html">Heiskell Community Technology Center</a>
-		</li>
-		<li>
-			<a href="/services/win_for_health.html">WIN for Health Program</a>
-		</li>
-	</ul>
+<div class="span2 left{% if page.aside_image %} bottomimage" style="background-image: url('{{ page.aside_image }}'){% endif %}">
+	<div>
+		<h1>Services</h1>
+		<ul>
+			<li>
+				<a href="/services/after_school.html">After School Program</a>
+			</li>
+			<li>
+				<a href="/services/broadway_united_businesses.html">Broadway United Businesses</a>
+			</li>
+			<li>
+				<a href="/services/chah.html">C.H.A.H. - Community Health Academy of the Heights</a>
+			</li>
+			<li>
+				<a href="/services/food_pantry.html">Food Pantry</a>
+			</li>
+			<li>
+				<a href="/services/freshmen_leadership.html">Freshmen Leadership Initiative Program</a>
+			</li>
+			<li>
+				<a href="/services/housing_development.html">Housing Development</a>
+			</li>
+			<li>
+				<a href="/services/technology_center.html">Heiskell Community Technology Center</a>
+			</li>
+			<li>
+				<a href="/services/win_for_health.html">WIN for Health Program</a>
+			</li>
+		</ul>
+	</div>
 </div>
-<div class="span9">
-	{% if page.top_image %}
-		<img src="{{ page.top_image }}" alt="">
-	{% endif %}
-	<h2>{{ page.title }}</h2>
-	{{ content }}
+<div class="span5 right{% if page.top_image %} topimage" style="background-image: url('{{ page.top_image }}'){% endif %}">
+	<div>
+		{{ content }}
+	</div>
 </div>
