--- a/assets/css/cloth.css
+++ b/assets/css/cloth.css
@@ -2,10 +2,13 @@ body {
 	height:100%;
 }
 
-.columnleft p {
-	text-align:justify;
+h1{
+	text-transform: uppercase;
 }
 
+/*************************************
+** HEADER
+**************************************/
 #header_bg {
 	position: absolute;
 	top:0;
@@ -13,12 +16,12 @@ body {
 	z-index:-2;
 	width: 100%;
 	height: 31px;
-	background-color: #FB4F11;
+	background-color: #FF6612;
 }
 
-.hearts_bg {
+#header_bg2 {
 	position: absolute;
-	background-image: url('../img/bg3.png');
+	background-image: url('../img/bg.png');
 	background-repeat: repeat;
 	z-index: -1;
 	right: 0px;
@@ -28,7 +31,7 @@ body {
 
 #header {
 	height: 31px;
-	background-color: #EC6D34;
+	background-color: #F28143;
 	color: #FFFFFF;
 	position: relative;
 }
@@ -37,14 +40,17 @@ body {
 	height: inherit;
 }
 
-.logotype {
+#logotype {
 	position: absolute;
 	left: 0px;
 	display: inline-block;
 	border-right: 5px solid white;
+	width: 40%;
+	min-width:299px;
+	background-color: #FF6612;
 }
 
-.toolbar {
+#toolbar {
 	position: absolute;
 	right: 0px;
 	background-color: #330d0c;
@@ -52,19 +58,24 @@ body {
 	border-right: 5px solid white;
 	width: 315px;
 }
+
+/* hide logotype when there's not enough
+   space for both logotype and toolbar  */
 @media (max-width: 630px) {
-  .logotype {
+  #logotype {
 	display:none;
   }
   #header {
 	border-right: 5px solid white;
   }
-  .toolbar {
+  #toolbar {
 	left:0px;
   }
 }
 
-.toolbar > div, .toolbar > a, .toolbar > form {
+#toolbar > div,
+#toolbar > a,
+#toolbar > form {
 	display: block;
 	float: left;
 	height: inherit;
@@ -73,11 +84,8 @@ body {
 
 #donate{
 	width: 81px;
-	background: url('../img/btn_donate.jpg');
 }
-#donate:hover {
-	background: url('../img/btn_donate_rollover.jpg');
-}
+
 #youtube{
 	width: 31px;
 	background: url('../img/btn_youtube.jpg');
@@ -85,6 +93,7 @@ body {
 #youtube:hover {
 	background: url('../img/btn_youtube_rollover.jpg');
 }
+
 #facebook{
 	width: 31px;
 	background: url('../img/btn_facebook.jpg');
@@ -97,6 +106,7 @@ body {
 	color: #FFFFFF;
 	font-size: 11px;
 }
+
 #language a {
 	display: block;
 	float: left;
@@ -104,19 +114,22 @@ body {
 	height: 17px;
 	color: #FFFFFF;
 	text-transform: uppercase;
+	text-decoration: none;
 }
 #language a:hover {
 	background-color: #90696a;
-	text-decoration: none;
 }
 
+/*************************************
+** NAVIGATION
+**************************************/
 #navbar {
 	background-color: #FFFFFF;
 }
 
 #logo {
 	display: block;
-	margin: 10px 0;
+	margin: 15px 0 10px 0;
 }
 
 #nav {
@@ -132,12 +145,10 @@ body {
 #nav a {
 	color: #000000;
 	font-size: 15px;
-	text-decoration:none;
-}
-#nav a:hover {
-	color: #FB4F11;
+	text-decoration: none;
 }
 
+#nav a:hover,
 #nav.home a.home,
 #nav.about a.about,
 #nav.services a.services,
@@ -148,9 +159,18 @@ body {
 	color: #FB4F11;
 }
 
+/*************************************
+** CONTENT
+**************************************/
 #content {
+	background-color: #FAF8F9;
 	background-color: #FCE5BF;
 	border-top: 2px solid #FB4F11;
+	position: relative;
+}
+
+#content a {
+	color: #000000;
 }
 
 .photos {
@@ -161,10 +181,84 @@ body {
 	max-width: none;
 }
 
-.columnleft div {
-	margin-top: 30px;
+#content .left > div,
+#content .right > div {
+	padding: 15px 25px;
 }
 
+#content .left p {
+	text-align:justify;
+	margin-top: 15px;
+}
+
+#content .left {
+	position: relative;
+	box-shadow: 8px 0px 8px -1px #999;
+	background-color: rgb(247, 211, 153);
+}
+@media (max-width: 767px) {
+  #content .left {
+	box-shadow: none;
+  }
+}
+
+#content .topimage {
+	background-repeat: repeat-x;
+	padding-top: 60px;
+}
+
+#content .bottomimage {
+	background-position: bottom;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	padding-bottom: 220px;
+}
+@media (max-width: 767px) {
+  #content .bottomimage {
+    background: none !important;
+	padding-bottom: 15px;
+	box-shadow: none;
+  }
+}
+
+#content.contact .topimage {
+	padding-top: 130px;
+}
+#content.contact {
+	text-transform: uppercase;
+}
+#content.contact a.map {
+	display: block;
+	height: 220px;
+}
+#content.contact address strong{
+	font-size: 11px;
+}
+#content.contact a{
+	font-weight: bold;
+	color: #185E46;
+}
+#content.contact table{
+	margin: 15px 0;
+}
+#content.contact table td{
+	padding: 2px 3px;
+}
+
+#content ul{
+	list-style-type: none;
+	margin: 0;
+}
+
+#content.services .left li {
+	margin-top: 10px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+/*************************************
+** FOOTER
+**************************************/
 #footer {
 	background-color: #FDEACC;
 	border-top: 2px solid #FB4F11;
@@ -182,5 +276,5 @@ body {
 }
 #footer2 {
 	height: 31px;
-	background: url('../img/bg3.png');
+	background: url('../img/bg.png');
 }
