title for services pages

--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -35,6 +35,7 @@ layout: main
 </div>
 <div class="span5 right{% if page.top_image %} topimage" style="background-image: url('{{ page.top_image }}'){% endif %}">
 	<div>
+		<h2>{{ page.title}}</h2>
 		{{ content }}
 	</div>
 </div>
