Better layout, gallery, improvements

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,15 @@
 ---
 layout: main
+category: home
 ---
 
-<div class="span2 left">
+<div class="span left">
 	<div>
 		<h1>{{ page.title }}</h1>
 		{{ page.aside | textilize }}
 	</div>
 </div>
 
-<div class="span5 photos">
+<div class="span right">
 	{{ content }}
 </div>
