--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -3,7 +3,7 @@ layout: main
 category: services
 ---
 
-<div class="span2 left{% if page.aside_image %} bottomimage" style="background-image: url('{{ page.aside_image }}'){% endif %}">
+<div class="span left{% if page.aside_image %} bottomimage" style="background-image: url('{{ page.aside_image }}'){% endif %}">
 	<div>
 		<h1>{% if page.language == 'es' %}Servicios{% else %}Services{% endif %}</h1>
 		<ul>
@@ -19,7 +19,7 @@ category: services
 		</ul>
 	</div>
 </div>
-<div class="span5 right{% if page.top_image %} topimage" style="background-image: url('{{ page.top_image }}'){% endif %}">
+<div class="span right{% if page.top_image %} topimage" style="background-image: url('{{ page.top_image }}'){% endif %}">
 	<div>
 		<h2>{{ page.title}}</h2>
 		{{ content }}
