Print CSS, fix events iframe

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,8 +7,9 @@
 		{{ page.title }} - Community League of the Heights
 	</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="/assets/css/bootstrap.custom3.min.css" rel="stylesheet" media="screen">
+	<link href="/assets/css/bootstrap.custom3.css" rel="stylesheet">
 	<link href="/assets/css/cloth.css" rel="stylesheet">
+	<link href="/assets/css/cloth.print.css" rel="stylesheet" media="print">
 	<script type="text/javascript">
 		/*
 		var _gaq = _gaq || [];
@@ -31,7 +32,7 @@
 		<div class="row">
 			<div class="span5" id="header">
 				<div id="logotype">
-					<a href="/{{ site.index[page.language].url }}">
+					<a href="/{{ site.index[page.language].url }}" title="">
 						<img src="/assets/img/logotype.gif" alt="Community League Of The Heights">
 					</a>
 				</div>
